# appl

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  PRIVACY.md  README.md  TODO.md  gendoc.sh  install.py  vim.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: rust-clippy.yml
df/: README.md  go.mod  go.sum  main.go
src/: Cargo.toml  cli.rs  cmd.rs  config.rs  db.rs  help.rs  input.rs  lib.rs  log.rs  main  main.rs  main3.rs  package.json  package.rs  packagedb.tdb  pkgutils.rs  prompt.rs  script.rs  setup.rs  table.rs  test.cpp  viewer.rs
src/file/: fetch.rs
src/script/: main.rs
src/src/: main.rs
src/utils/: main.rs
