[package]
name = "appl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
checksums = "0.9.1"
clap = {version = "4.3.23", features = ["derive"]}
colored = "2.0.4"
dialoguer = "0.10.4"
futures-util = "0.3.28"
git2 = "0.18.1"
indicatif = "0.17.6"
reqwest = "0.11.22"
sevenz-rust = { version = "0.5.3", features = ["aes256"] }
tar = "0.4.40"
tokio = "1.33.0"
toml = "0.8.2"
trauma = "*"
walkdir = "2.4.0"
whoami = "1.4.1"
zip = "0.6.6"
[dependencies.rustix]
version = "0.38.19"
