[package]
name = "appl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
checksums = "0.9.1"
clap = {version = "4.3.23", features = ["derive"]}
colored = "2.0.4"
dialoguer = "0.10.4"
futures-util = "0.3.28"
indicatif = "0.17.6"
reqwest = { version = "0.11.22", features = ["stream"] }
syntect = "5.1.0"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.2"
walkdir = "2.4.0"
whoami = "1.4.1"
zip = "0.6.6"
[dependencies.rustix]
version = "0.38.19"
