[package]
name = "appl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.18"
colored = "2.1.0"
dialoguer = "0.11.0"
indicatif = "0.17.7"
mlua = { version = "0.9.5", features = ["lua54"] }
reqwest = "0.11.24"
serde = { version = "1.0.196", features = ["derive"] }
stanza = "0.5.1"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.10"
toml_edit = "0.21.1"
